[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
databento = "0.36.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.8"
axum = "0.8.7"
tower = "0.5"
clap = { version = "4", features = ["derive"] }
