[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8.7"
clap = { version = "4", features = ["derive"] }
databento = "0.36.0"
env_logger = "0.11.8"
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
